--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,12 @@
+apply plugin: 'com.android.application'
 
+apply plugin: 'kotlin-android'
 
-    apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
 
-    apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
-    apply plugin: 'kotlin-android-extensions'
-
-    apply plugin: 'kotlin-kapt'
-
-
-
-
-
-
-
-    android {
+android {
     compileSdkVersion 30
     buildToolsVersion "29.0.3"
 
@@ -31,9 +23,9 @@
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments += [
-                        "room.schemaLocation":"$projectDir/schemas".toString(),
-                        "room.incremental":"true",
-                        "room.expandProjection":"true"]
+                        "room.schemaLocation"  : "$projectDir/schemas".toString(),
+                        "room.incremental"     : "true",
+                        "room.expandProjection": "true"]
             }
         }
     }
@@ -70,6 +62,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -98,15 +91,32 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
     //Login interceptor
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
-
-  //room database
+    //room database
     // Room components
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
+    implementation 'androidx.room:room-ktx:2.2.1'
+    kapt "androidx.room:room-compiler:2.2.1"
+
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
 
     //for database debugging
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+    //location dependency
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
 
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+    // custome radio button
+    implementation 'com.github.aagitoEx:imageradiobutton:1.0'
+
+    //db check
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+
+    //swap to refresh
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    implementation 'com.jjoe64:graphview:4.2.2'
 
 }
